add handling of relative urls